<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notification Saver</string>
    <string name="action_bar_toolbar_title">Notifications</string>
    <string name="activity_filters_label">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_newFilter">New Filter</string>
    <string name="action_share">Share</string>
    
    <!-- Strings for dialogs -->
    <string name="cancel">Cancel</string>
    
    <!-- Strings for MainActivity.InactiveNotificationListenerDialogFragment -->
    <string name="open_settings">Go to Settings</string>
    <string name="listener_not_enabled_warning">Notification Saver requires access to your notifications in order to work. Enable now?</string>
    <string name="listener_not_enabled_title">No notification access</string>
    
    <!-- Strings for NotifList.NotificationInfoDialogFragment -->
    <string name="app_info_settings">App Info</string>
    <string name="play_store_link">Play Store</string>
    
    <!-- Strings for NotifList.ConfirmDeleteDialogFragment -->
    <string name="confirm_delete_warning">These notifications cannot be recovered.</string>
    <string name="confirm_delete_title">Are you sure?</string>
    <string name="confirm_delete_button">Delete</string>
    
    <!-- Strings for NewFilterDialogFragment -->
    <string name="dialog_newfilter_dialogtitle">New Filter</string>
    <string name="dialog_newfilter_dialogtitle_edit">Edit Filter</string>
    <string name="dialog_newfilter_filtername_hint">Filter Name</string>
    <string name="dialog_newfilter_title_hint">Notification Title</string>
    <string name="dialog_newfilter_text_hint">Notification Text</string>
    <string name="dialog_newfilter_appname_hint">App</string>
    <string name="dialog_newfilter_packagename_hint">Package</string>
    <string name="dialog_newfilter_done">Done</string>
    <string name="dialog_newfilter_checkbox_exact">Exact</string>
    <string name="dialog_newfilter_noname_message">Need a filter name</string>
    <string name="dialog_newfilter_nameexists_message">Filter name already exists</string>
    
    <!-- Strings used in layouts -->
    <string name="content_description_small_icon">Small Icon</string>
    <string name="content_description_app_icon">App Icon</string>
    <string name="notiflist_empty">No Notifications</string>
    <string name="search_hint">Search notifications</string>
    <string name="no_filters">No filters have been added yet. Tap the \'+\' to add a new filter.</string>
    <string name="list_item_filter_filtername_default">Filter Name</string>
    <string name="list_item_filter_text_default">Text</string>
    <string name="list_item_filter_title_default">Title</string>
    <string name="list_item_filter_appname_default">App Name</string>
    <string name="list_item_filter_packagename_default">Package</string>
    <string name="list_item_filter_contains">CONTAINS</string>
    <string name="list_item_filter_matches">MATCHES</string>
    
    <!-- Strings used in preferences -->
    <string name="pref_notesToKeep">Notifications saved limit</string>
    <string name="pref_notesToKeep_default">-1</string>
    <string name="pref_defaultViewMode">Default view</string>
    <string name="pref_defaultViewMode_default">day</string>
    <string name="pref_filterList">Notification filters</string>
    <string name="pref_filterList_summary">Blacklist notifications from being saved.</string>
    <string name="pref_exportCSV">Export to CSV</string>
    <string name="pref_exportCSV_summary">Create a CSV of all your notification history to open in any spreadsheet software</string>
    
    <!-- Strings used in HistoryExporter -->
    <string name="inaccessible_storage">Storage is inaccesible</string>
    <string name="export_success">Export saved to Documents. Tap to view.</string>
    <string name="export_failed">Export failed</string>
    <string name="export_notification_title">Notification history export</string>
    <string name="export_in_progress">Export in progress</string>
    <string name="export_notification_ticker">Exporting history</string>
    <string name="export_notification_ticker_complete">Export complete</string>

</resources>
